--- a/res-latex/main.tex
+++ b/res-latex/main.tex
@@ -78,10 +78,12 @@
 \section{Linear Multi-Factor Model with PCA}
 \label{pca-apt}
 \input{pca-apt}
-
-\section{Portfolio Optimization}
+\subsection{Portfolio Optimization}
 \label{optimization}
 \input{optimization}
+\subsection{Model Implementation}
+\label{implementation}
+\input{implementation}
 
 \section{Model's Performance Analysis}
 \label{model-testing}
