--- a/res-latex/main.tex
+++ b/res-latex/main.tex
@@ -22,7 +22,8 @@
 \usepackage[sorting=none, backend=biber]{biblatex} %Bibliography package
 \usepackage{amsmath}
 \addbibresource{references.bib} %add references bib file
-
+\usepackage{algorithm}
+\usepackage{algorithmic}
 
 
 
@@ -78,7 +79,7 @@
 \section{Linear Multi-Factor Model with PCA}
 \label{pca-apt}
 \input{pca-apt}
-\subsection{Portfolio Optimization}
+\subsection{Portfolio Optimization - Risk-Parity Approach}
 \label{optimization}
 \input{optimization}
 \subsection{Model Implementation}
