--- a/res-latex/implementation.tex
+++ b/res-latex/implementation.tex
@@ -15,7 +15,7 @@ In order to better represent an actual real-world implementation of this model I
 		\STATE Store portfolio daily returns and volatility
 		\STATE go to next period: TEMPDATE + chosen OFFSET (day, week, month, year)
 		\ENDWHILE
-		\RETURN Daily portfolio returns and volatility
+		\RETURN Daily portfolio returns over testing period from initial value of TEMPDATE to FINALDATE
 	\end{algorithmic}
 \end{algorithm}
 
